--- a/js_pactice/main_page/style.css
+++ b/js_pactice/main_page/style.css
@@ -71,7 +71,7 @@ body{
   padding-left: 20px;
   padding-top: 105px;
 }
-.submit{
+.submit1, .submit2{
     height: 50px;
     width: 60px;
     border: none;
